--- a/assets/scss/config/_contact.scss
+++ b/assets/scss/config/_contact.scss
@@ -72,6 +72,7 @@
     //問い合わせ完了画面
     .thank-area{
         width: 70%;
+        height: 70vh;
         margin: 0 auto;
         color: v.$fontColor;
         .thank{
