--- a/assets/scss/config/_blog.scss
+++ b/assets/scss/config/_blog.scss
@@ -96,17 +96,23 @@
                 padding: 5% 0;
                 overflow: wrap;
                 width: 24vw;
-                a{
-                    color: v.$fontColor;
-                    border-bottom: none;
-                    border-radius: 3px;
-                    padding: 6px 3px;
-                    background-color: #d2d2d2ba;
-                    margin: 3px;
-                    font-size: 16px;
-                    display: inline-block;
-                    width: fit-content;
-                }
+                ul{
+                    li{
+                        list-style-type: none;
+                        display: inline-block;
+                        a{
+                            color: v.$fontColor;
+                            border-bottom: none;
+                            border-radius: 3px;
+                            padding: 6px 3px;
+                            background-color: #d2d2d2ba;
+                            margin: 3px;
+                            font-size: 16px;
+                            display: inline-block;
+                            width: fit-content;
+                        }
+                    }
+                }    
             }
         }
     }
@@ -119,10 +125,11 @@
                 width: 94%;
             }
             .side-bar{
+                position: absolute;
+                    top:5%;
+                    right: 3%;    
                 .search-form{
-                    position: absolute;
-                    top: 15vh;
-                    right: 3%;         
+                         
                     padding-left: 0; 
                     input{
                         @include m.borderForm(false);
