--- a/assets/scss/config/_setting.scss
+++ b/assets/scss/config/_setting.scss
@@ -17,12 +17,13 @@ ul{
     margin-block-start: 0;
     margin-block-end: 0;
     li{
-        list-style: none;
+        list-style-type: none;
     }
 }
 a{
     text-decoration: none;
     border-bottom: none;
+    color: black
 }
 input,textarea{
     @include m.borderForm(true);
