--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,9 +778,9 @@ main {
   padding: 10% 5%;
 }
 .content-area .content-item {
-  width: 100%;
+  width: fit-content;
   margin: 0 auto;
-  display: flex;
+  vertical-align: top;
 }
 .content-area .content-item .content-img {
   border-radius: 50%;
@@ -789,8 +789,10 @@ main {
   transform: rotateZ(20deg);
   border-radius: 80% 40% 30% 50%;
   position: relative;
-  width: 40vw;
-  height: 40vw;
+  width: 550px;
+  height: 550px;
+  text-align: right;
+  display: inline-block;
 }
 .content-area .content-item .content-img .content-border {
   position: absolute;
@@ -798,18 +800,20 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 80% 40% 30% 50%;
-  width: 36vw;
-  height: 36vw;
+  width: 495px;
+  height: 495px;
+  object-fit: cover;
   overflow: hidden;
 }
 .content-area .content-item .content-img .content-border img {
   width: 40vw;
   height: auto;
-  transform: rotateZ(-20deg) scale(1.1);
+  transform: rotateZ(-20deg) scale(1.5);
 }
 .content-area .content-item .content-text {
   width: 40%;
-  margin: 0 auto;
+  display: inline-block;
+  margin-left: 20px;
 }
 .content-area .content-item .content-text div {
   padding-left: 10%;
@@ -819,17 +823,17 @@ main {
   line-height: 1.5rem;
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1024px) {
   .content-area .content-item {
     display: block;
   }
   .content-area .content-item .content-img {
-    width: 90vw;
-    height: 90vw;
+    width: 80vw;
+    height: 80vw;
   }
   .content-area .content-item .content-img .content-border {
-    width: 81vw;
-    height: 81vw;
+    width: 72vw;
+    height: 72vw;
   }
   .content-area .content-item .content-img .content-border img {
     width: 100%;
@@ -840,6 +844,12 @@ main {
     width: 100%;
     margin: 0 auto;
     padding: 10% 0;
+  }
+  .main-list-wrap {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0 auto;
+    width: 450px;
   }
 }
 .blog-area-home {
@@ -922,6 +932,41 @@ main {
     font-size: 20px;
   }
 }
+.main-list-wrap {
+  box-sizing: border-box;
+  padding: 5% 0;
+  width: 450px;
+}
+.main-list-wrap .main-list-item {
+  position: relative;
+  padding: 3%;
+}
+.main-list-wrap .main-list-item::before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-left: 2px solid #44476a;
+  border-top: 2px solid #44476a;
+}
+.main-list-wrap .main-list-item::after {
+  content: "";
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-right: 2px solid #44476a;
+  border-bottom: 2px solid #44476a;
+}
+.main-list-wrap .main-list-item .main-list-txt01 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-left: 3%;
+}
+
 .decoration-item {
   padding-top: 10vh;
   width: 0;
@@ -1117,12 +1162,13 @@ footer .link-icon .link-text {
   padding: 0 3%;
 }
 .blog-area .blog-wrap .post-area .post-item {
+  max-width: 875px;
   width: 94%;
   height: 40vh;
   border: 1px solid rgba(107, 107, 107, 0.2980392157);
   border-radius: 20px;
   padding: 3% 3% 5% 3%;
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
   transition: 0.1s;
 }
 .blog-area .blog-wrap .post-area .post-item .post-top .post-thumb {
@@ -1169,6 +1215,7 @@ footer .link-icon .link-text {
 }
 .blog-area .blog-wrap .side-bar {
   width: 30%;
+  height: 300px;
   padding-top: 10%;
 }
 .blog-area .blog-wrap .side-bar .search-form {
@@ -1276,7 +1323,8 @@ footer .link-icon .link-text {
   padding: 3vw;
 }
 .article_body .content {
-  line-height: 1.5rem;
+  line-height: 3rem;
+  text-align: center;
 }
 
 .postLinks {
