--- a/assets/scss/config/_blog.scss
+++ b/assets/scss/config/_blog.scss
@@ -17,12 +17,13 @@
             overflow-x: hidden;
             padding: 0 3%;
             .post-item{
+                max-width: 875px;
                 width: 94%;
                 height: 40vh;
                 border: 1px solid #6b6b6b4c;
                 border-radius: 20px;
                 padding: 3% 3% 5% 3%;
-                margin-bottom: 10px;
+                margin: 0 auto 10px;
                 transition: .1s;
                 .post-top{
                     .post-thumb{
@@ -75,6 +76,7 @@
         }
         .side-bar{
             width: 30%;
+            height: 300px;
             padding-top: 10%;
             .search-form{
                 border: 1px solid #6b6b6b9d;
