--- a/assets/scss/config/_main.scss
+++ b/assets/scss/config/_main.scss
@@ -49,33 +49,37 @@ main{
     width: 90%;
     padding: 10% 5%;
     .content-item{
-        width: 100%;
+        width: fit-content;
         margin: 0 auto;
-        display: flex;
+        vertical-align: top;
         .content-img{
             @include m.btn(false);
             transform: rotateZ(20deg);
             border-radius: 80% 40% 30% 50%;
             position: relative;
-            width: 40vw;
-            height: 40vw;
+            width: 550px;
+            height: 550px;
+            text-align: right;
+            display: inline-block;
             .content-border{
                     @include m.positionCenter;
                     border-radius: 80%  40% 30% 50%;
-                    width: calc(40vw * 0.90);
-                    height: calc(40vw * 0.90);
+                    width: calc(550px * 0.90);
+                    height: calc(550px * 0.90);
+                    object-fit: cover;
                     overflow: hidden;
                 img{
                     width: 40vw;
                     height: auto;
-                    transform: rotateZ(-20deg) scale(1.1);        
+                    transform: rotateZ(-20deg) scale(1.5);        
                 }
             }
             
         }
         .content-text{
             width: 40%;
-            margin: 0 auto;
+            display: inline-block;
+            margin-left: 20px;
             div{
                 padding-left: 10%;
                 color: v.$fontColor;
@@ -89,16 +93,16 @@ main{
     }
     
 }
-@include m.mq(xs){
+@include m.mq(md){
     .content-area{
         .content-item{
             display: block;
             .content-img{
-                width: 90vw;
-                height: 90vw;
+                width: 80vw;
+                height: 80vw;
                 .content-border{
-                    width: calc(90vw * 0.90);
-                    height: calc(90vw * 0.90);
+                    width: calc(80vw * 0.90);
+                    height: calc(80vw * 0.90);
                     img{
                         width: 100%;
                         height: auto;
@@ -113,6 +117,17 @@ main{
             }
         }
     }
+
+
+.main-list-wrap{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0 auto;
+    width: 450px;
+    .main-list-item{
+        
+    }
+}
 }
 
 .blog-area-home{
@@ -191,6 +206,41 @@ main{
                     font-size: 20px;
                 }
             }
+        }
+    }
+}
+
+.main-list-wrap{
+    box-sizing: border-box;
+    padding: 5% 0;
+    width: 450px;
+    .main-list-item{
+        position: relative;
+        padding: 3%;
+        &::before{
+            content: "";
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-left: 2px solid v.$fontColor;
+            border-top: 2px solid v.$fontColor;
+        }
+        &::after{
+            content: "";
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            border-right: 2px solid v.$fontColor;
+            border-bottom: 2px solid v.$fontColor;
+        }
+        .main-list-txt01{
+            font-size: 18px;
+            font-weight: 600;
+            margin-left: 3%;
         }
     }
 }
