--- a/assets/scss/config/_single.scss
+++ b/assets/scss/config/_single.scss
@@ -43,7 +43,8 @@
     width: 100%;
     padding: 3vw;
     .content{
-        line-height: 1.5rem;
+        line-height: 3rem;
+        text-align: center;
     }
 }
 
